Done Task 3 (my part)

--- a/tasks/task-3/task-3-css/style.css
+++ b/tasks/task-3/task-3-css/style.css
@@ -168,14 +168,60 @@ h5 {
 
 /*CSS TEAM F**/
 
-.TEAM_F_paintDot,
-.TEAM_A_glowStamp {
+.TEAM_F_paintDot {
   position: absolute;
-  width: 15px;
-  height: 15px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   opacity: 1;
+  /* centers dot to cursor */
   transform: translate(-50%, -50%);
+  /* adds trailing effect */
   transition: opacity 1s linear;
   /* pointer-events: none; */
+  /* smiley emoji */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 50px;
+  /* hide cursor */
+  cursor: none;
+}
+
+.TEAM_F_face {
+  position: absolute;
+  width: 220px;
+  height: 220px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background: rgb(170, 170, 0);
+  border: 4px solid black;
+}
+
+.TEAM_F_eye {
+  position: absolute;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  background: black;
+  top: 70px;
+}
+
+.TEAM_F_eyeLeft {
+  left: 70px;
+}
+
+.TEAM_F_eyeRight {
+  right: 70px;
+}
+
+.TEAM_F_mouth {
+  position: absolute;
+  left: 50%;
+  top: 130px;
+  width: 120px;
+  height: auto;
+  transform-origin: center;
 }
